--- a/SecureWalk/src/app/components/menu/menu.component.html
+++ b/SecureWalk/src/app/components/menu/menu.component.html
@@ -8,75 +8,75 @@
     <mat-icon>menu</mat-icon>
     <button mat-button [matMenuTriggerFor]="menuUsuario">
       Usuarios
-      <mat-icon>person</mat-icon>
+      <mat-icon>group</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuZona">
       Zona
-      <mat-icon>location_on</mat-icon>
+      <mat-icon>map</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuPregunta">
       Pregunta
-      <mat-icon>help</mat-icon>
+      <mat-icon>help_outline</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuEncuesta">
       Encuesta
-      <mat-icon>poll</mat-icon>
+      <mat-icon>assignment</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuRol">
       Rol
-      <mat-icon>poll</mat-icon>
+      <mat-icon>verified_user</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuRuta">
       Ruta
-      <mat-icon>poll</mat-icon>
+      <mat-icon>alt_route</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuIncidente">
       Incidente
-      <mat-icon>poll</mat-icon>
+      <mat-icon>report_problem</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuEvaluacionIncidente">
       Evaluacion Incidente
-      <mat-icon>poll</mat-icon>
+      <mat-icon>rate_review</mat-icon>
     </button>
     <button mat-button [matMenuTriggerFor]="menuPost">
       Post
-      <mat-icon>poll</mat-icon>
+      <mat-icon>article</mat-icon>
     </button>
     <button mat-button [matMenuTriggerFor]="menuComentario">
       Comentario
-      <mat-icon>poll</mat-icon>
+      <mat-icon>comment</mat-icon>
     </button>
   </div>
     <div>
     <button mat-button [matMenuTriggerFor]="menuUsuarioRuta">
       Usuario Ruta
-      <mat-icon>poll</mat-icon>
+      <mat-icon>person_pin_circle</mat-icon>
     </button>
   </div>
  <div>
     <button mat-button [matMenuTriggerFor]="menuEncuestaPregunta">
       Encuesta Pregunta
-      <mat-icon>poll</mat-icon>
+      <mat-icon>quiz</mat-icon>
     </button>
   </div>
   <div>
     <button mat-button [matMenuTriggerFor]="menuRespuesta">
       Respuesta
-      <mat-icon>poll</mat-icon>
+      <mat-icon>question_answer</mat-icon>
     </button>
   </div>
 
